Merged Join - added Tests.